--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,11 @@
           
 <h1> Prepared in 2025 </h1>
 
+[281] 
+Ali Beikmohammadi, Sarit Khirirat, Peter Richtárik, and Sindri Magnússon<br>
+<b>Collaborative value function estimation under model mismatch: a federated temporal difference analysis</b><br>
+[<a href="https://arxiv.org/abs/2503.17454">arXiv</a>] [method: FedTD(0)] <br><br> 
+
 [280] 
 Konstantin Burlachenko and Peter Richtárik<br>
 <b>BurTorch: Revisiting training from first principles by coupling autodiff, math optimization, and systems</b><br>
