--- a/index.html
+++ b/index.html
@@ -43,12 +43,38 @@
       <div id="wrapper" class="main">
         <div id="content">
 
+<h3>April 9, 2025</h3>
+
+<h1>Talk @ FLOW </h1>
+<br>
+
+I just gave a talk at the <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">Federated Learning One World (FLOW)</a>  seminar. My talk had an unusually long title: 
+
+<br>
+<br>
+<a href="docs/TALK-2025-04-09-FLOW-ASYNC.pdf">
+<img alt="" src="imgs/FLOW-2025-thumb.png" width="700">
+</a>
+
+
+
+
+
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 
 <h3>April 7-10, 2025</h3>
 
 <h1>Rising Stars in AI Symposium @ KAUST</h1>
   
-I am attending the <a href="https://www.kaust.edu.sa/en/news/rising-stars-in-ai-symposium-2025">Rising Stars in AI Symposium</a> here at KAUST, organized by our KAUST Center if Excellence in Generative AI. <br>
+I am attending the <a href="https://www.kaust.edu.sa/en/news/rising-stars-in-ai-symposium-2025">Rising Stars in AI Symposium</a> here at KAUST, organized by our KAUST Center if Excellence in Generative AI. I am giving a short talk at this event on April 9.<br>
 
 
 <br>
