--- a/index.html
+++ b/index.html
@@ -43,6 +43,22 @@
       <div id="wrapper" class="main">
         <div id="content">
 
+
+<h3>April 9, 2025</h3>
+
+<h1>SAC @ NeurIPS 2025 </h1>
+<br>
+
+This year, I will be serving NeurIPS in the role of a Senior Area Chair (SAC).
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 <h3>April 9, 2025</h3>
 
 <h1>Talk @ FLOW </h1>
@@ -55,9 +71,6 @@ I just gave a talk at the <a href="https://sites.google.com/view/one-world-semin
 <a href="docs/TALK-2025-04-09-FLOW-ASYNC.pdf">
 <img alt="" src="imgs/FLOW-2025-thumb.png" width="700">
 </a>
-
-
-
 
 
 <br>
