--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,11 @@
           
 <h1> Prepared in 2025 </h1>
 
+[282] 
+Ivan Ilin and Peter Richtárik<br>
+<b>Thanos: a block-wise pruning algorithm for efficient large language model compression</b><br>
+[<a href="https://arxiv.org/abs/2504.05346">arXiv</a>] [method: Thanos] <br><br> 
+
 [281] 
 Ali Beikmohammadi, Sarit Khirirat, Peter Richtárik, and Sindri Magnússon<br>
 <b>Collaborative value function estimation under model mismatch: a federated temporal difference analysis</b><br>
