--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         <div id="content">
 
 
+
+
+
 <h3>April 9, 2025</h3>
 
 <h1>SAC @ NeurIPS 2025 </h1>
@@ -89,6 +92,29 @@ I just gave a talk at the <a href="https://sites.google.com/view/one-world-semin
   
 I am attending the <a href="https://www.kaust.edu.sa/en/news/rising-stars-in-ai-symposium-2025">Rising Stars in AI Symposium</a> here at KAUST, organized by our KAUST Center if Excellence in Generative AI. I am giving a short talk at this event on April 9.<br>
 
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
+<h3>April 6, 2025</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2504.05346">
+"Thanos: A Block-wise Pruning Algorithm for Efficient Large Language Model Compression"</a> -
+joint work with Ivan Ilin.
+<br>
+<br>
+  
+Abstract: <i>This paper presents Thanos, a novel weight-pruning algorithm designed to reduce the memory footprint and enhance the computational efficiency of large language models (LLMs) by removing redundant weights while maintaining accuracy. Thanos introduces a block-wise pruning strategy with adaptive masks that dynamically adjust to weight importance, enabling flexible sparsity patterns and structured formats, such as n:m sparsity, optimized for hardware acceleration. Experimental evaluations demonstrate that Thanos achieves state-of-the-art performance in structured pruning and outperforms existing methods in unstructured pruning. By providing an efficient and adaptable approach to model compression, Thanos offers a practical solution for deploying large models in resource-constrained environments.</i>
+  
+<br>
 
 <br>
 <br>
