--- a/i_talks.html
+++ b/i_talks.html
@@ -60,6 +60,11 @@ Introduction to Machine Learning 1/2, Aramco, October 9-12, 2025 (24 hours)
 </p>
 
 <p>
+<a href="https://federated-learning.org/fl-asiaccs-2025/">International Workshop on Secure and Efficient Federated Learning
+In Conjunction with ACM AsiaCCS 2025</a> (FL-AsiaCCS’25), Hanoi, Vietnam, August 26, 2025 (plenary) 
+</p>
+
+<p>
 Introduction to Optimization 2/2, Aramco, July 24-29, 2025 (24 hours)
 </p>
 
