--- a/index.html
+++ b/index.html
@@ -62,6 +62,28 @@ This year, I will be serving NeurIPS in the role of a Senior Area Chair (SAC).
 <br>
 
 
+<h3>April 24, 2025</h3>
+
+<h1> ICLR 2025 @ Singapore </h1>
+<br>
+
+I have just arrived in Singapore to attend <a href="https://iclr.cc/Conferences/2025">The Thirteenth International Conference on Learning Representations (ICLR 2025)</a>. We are presenting several papers at the conference and the workshops, including:
+<br>
+<br> 1) Laurent Condat, Arto Maranjyan, Peter Richtárik, <a href="https://openreview.net/forum?id=PpYy0dR3Qw">LoCoDL: Communication-Efficient Distributed Learning with Local Training and Compression</a> (spotlight)<br>
+<br> 2) Yury Demidovich, Petr Ostroukhov, Grigory Malinovsky, Samuel Horváth, Martin Takáč, Peter Richtárik, Eduard Gorbunov, <a href="https://openreview.net/forum?id=TrJ36UfD9P">Methods with Local Steps and Random Reshuffling for Generally Smooth Non-Convex Federated Optimization</a> (poster)<br>
+<br> 3) Yury Demidovich, Grigory Malinovsky, Egor Shulgin, Peter Richtárik, <a href="https://openreview.net/forum?id=sPuLtU32av">MAST: Model-agnostic Sparsified Training</a> (poster)<br>
+<br> 4) Eduard Gorbunov, Nazarii Tupitsa, Sayantan Choudhury, Alen Aliev, Peter Richtárik, Samuel Horváth, Martin Takáč, <a href="https://openreview.net/forum?id=0wmfzWPAFu">Methods for Convex $(L_0,L_1)$-Smooth Optimization: Clipping, Acceleration, and Adaptivity</a> (poster)<br>
+<br> 5) Kai Yi, Peter Richtárik, <a href="https://arxiv.org/pdf/2501.18980?">Symmetric Pruning for Large Language Models</a> (workshop)
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 <h3>April 9, 2025</h3>
 
 <h1>Talk @ FLOW </h1>
