UAI 2025 (3 papers) and ICML 2025 (2 papers)

--- a/i_papers.html
+++ b/i_papers.html
@@ -94,6 +94,7 @@ Kaja Gruntkowska, Hanmin Li, Aadi Rane, and Peter Richtárik<br>
 [274] 
 Artavazd Maranjyan, El Mehdi Saad, Peter Richtárik, and Francesco Orabona<br>
 <b>ATA: Adaptive task allocation for efficient resource management in distributed machine learning</b><br>
+42nd International Conference on Machine Learning (ICML 2025) <br>
 <span class="important">Asynchronous Optimization</span><br>   
 [<a href="https://arxiv.org/abs/2502.00775">arXiv</a>] [method: ATA] <br><br> 
 
@@ -106,6 +107,7 @@ Kai Yi and Peter Richtárik<br>
 [272] 
 Artavazd Maranjyan, Alexander Tyurin and Peter Richtárik<br>
 <b>Ringmaster ASGD: The first asynchronous SGD with optimal time complexity</b><br>
+42nd International Conference on Machine Learning (ICML 2025) <br>
 <span class="important">Asynchronous Optimization</span><br>    
 [<a href="https://arxiv.org/abs/2501.16168">arXiv</a>] [method: Naive Optimal ASGD, Ringmaster ASGD] <br><br> 
 
@@ -172,7 +174,8 @@ Grigory Malinovsky, Umberto Michieli, Hasan Abed Al Kader Hammoud, Taha Ceritli,
 
 [261] 
 Artavazd Maranjyan, Omar Shaikh Omar, and Peter Richtárik<br>
-<b>MindFlayer: Efficient asynchronous parallel SGD in the presence of heterogeneous and random worker compute times</b><br>
+<b>MindFlayer SGD: Efficient parallel SGD in the presence of heterogeneous and random worker compute times</b><br>
+41st Conference on Uncertainty in Artificial Intelligence (UAI 2025) <br>
 NeurIPS 2024 Workshop: Optimization for Machine Learning (OPT 2024) <br>
 to be presented at <a href="https://deepmath-conference.com/submissions">Conference on the Mathematical Theory of Deep Neural Networks (DeepMath 2024)</a>
 <span class="important">Asynchronous Optimization</span><br> 
@@ -310,6 +313,7 @@ Advances in Neural Information Processing Systems 38 (NeurIPS 2024)</a> <br>
 [241] 
 Andrei Panferov, Yury Demidovich, Ahmad Rammal, and Peter Richtárik<br>
 <b>Correlated quantization for faster nonconvex distributed optimization</b><br>
+41st Conference on Uncertainty in Artificial Intelligence (UAI 2025) <br>
 <span class="important">Federated Learning Paper</span><br>          
 [<a href="https://arxiv.org/abs/2401.05518">arXiv</a>]  <br><br> 
 
@@ -470,6 +474,7 @@ Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
           
           [218] Avetik Karagulyan and Peter Richtárik<br>
           <b>ELF: Federated Langevin algorithms with primal, dual and bidirectional compression</b><br>
+41st Conference on Uncertainty in Artificial Intelligence (UAI 2025) <br>          
           <a href="https://fl-icml2023.github.io">Federated Learning and Analytics in Practice: Algorithms, Systems, Applications, and Opportunities (ICML 2023 Workshop) </a> <br>          
           <span class="important">Federated Learning Paper</span><br>          
           [<a href="https://arxiv.org/abs/2303.04622">arXiv</a>] [method: ELF, P-ELF, D-ELF, B-ELF] <br>
