--- a/i_talks.html
+++ b/i_talks.html
@@ -60,6 +60,10 @@ Introduction to Machine Learning 1/2, Aramco, October 9-12, 2025 (24 hours)
 </p>
 
 <p>
+<a href="https://ins.uni-bonn.de/2025/hda">10th Workshop on High-Dimensional Approximation (HDA2025)</a>, Bonn, Germany, September 8-12, 2025 (invited by Michael Griebel)
+</p>
+
+<p>
 <a href="https://federated-learning.org/fl-asiaccs-2025/">International Workshop on Secure and Efficient Federated Learning
 In Conjunction with ACM AsiaCCS 2025</a> (FL-AsiaCCS’25), Hanoi, Vietnam, August 26, 2025 (plenary) 
 </p>
@@ -92,19 +96,20 @@ Introduction to Optimization 1/2, Aramco, June 26-29, 2025 (24 hours)
 <a href="https://ps-mathematik.univie.ac.at/e/index.php?event=VWCO25">3rd Vienna Workshop on Computational Optimization 2025 (VWCO25)</a>, Vienna, Austria, June 4-6, 2025 (invited by Radu Bot)
 </p>
 
-<p>
-<a href="https://virtual.aistats.org/Conferences/2025">The 28th International Conference on Artificial Intelligence and Statistics (AISTATS 2025)</a>, Splash Beach Resort, Mai Khao, Thailand, May 3-5, 2025 
-</p>
-
-<p>
-<a href="https://iclr.cc/Conferences/2025">The 13th International Conference on Learning  (ICLR 2025)</a>, Singapore, April 24-28, 2025 
-</p>
-
-
 
 
 
 <h1>2025 Talks</h1>
+
+<p>
+[262]
+<a href="https://virtual.aistats.org/Conferences/2025">The 28th International Conference on Artificial Intelligence and Statistics (AISTATS 2025)</a>, Splash Beach Resort, Mai Khao, Thailand, May 3-5, 2025 
+</p>
+
+<p>
+[261]
+<a href="https://iclr.cc/Conferences/2025">The 13th International Conference on Learning  (ICLR 2025)</a>, Singapore, April 24-28, 2025 
+</p>
 
 <p>
 [260]
