--- a/i_team.html
+++ b/i_team.html
@@ -136,6 +136,11 @@
           <h2>Research Interns</h2>
 
           <ul> 
+          
+             <li>
+            Alexander Gaponov (5/2025-present), 
+            from HSE, Moscow
+            </li>                  
            
              <li>
             Adrien Fradin (4/2025-present), 
