--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,16 @@
           
 <h1> Prepared in 2025 </h1>
 
+[284] 
+Artem Riabinin, Egor Shulgin, Kaja Gruntkowska, and Peter Richtárik<br>
+<b>Gluon: Making Muon & Scion great again! (bridging theory and practice of LMO-based optimizers for LLMs)</b><br>
+[<a href="https://arxiv.org/abs/2505.13416">arXiv</a>] [method: Gluon, Muon, Scion] <br><br> 
+
+[283] 
+Laurent Condat, Elnur Gasanov, and Peter Richtárik<br>
+<b>The stochastic multi-proximal method for nonsmooth optimization</b><br>
+[<a href="https://arxiv.org/abs/2505.12409">arXiv</a>] [method: SMPM, FedSMPM, Point-SAGA, ProxSkip, Davis-Yin] <br><br> 
+
 [282] 
 Ivan Ilin and Peter Richtárik<br>
 <b>Thanos: a block-wise pruning algorithm for efficient large language model compression</b><br>
