--- a/i_team.html
+++ b/i_team.html
@@ -81,7 +81,7 @@
 
           <ul>
           
-            <li>Artem Riabinin (1/2025-present), KAUST
+            <li><a href="https://artem-riabinin.netlify.app">Artem Riabinin</a> (1/2025-present), KAUST
               <a href="https://artem-riabinin.netlify.app"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>         
             </li>             
           
