--- a/i_papers.html
+++ b/i_papers.html
@@ -52,7 +52,8 @@
 
 [284] 
 Artem Riabinin, Egor Shulgin, Kaja Gruntkowska, and Peter Richtárik<br>
-<b>Gluon: Making Muon & Scion great again! (bridging theory and practice of LMO-based optimizers for LLMs)</b><br>
+<b>Gluon: making Muon & Scion great again! (bridging theory and practice of LMO-based optimizers for LLMs)</b><br>
+<span class="important">LLM Paper</span><br> 
 [<a href="https://arxiv.org/abs/2505.13416">arXiv</a>] [method: Gluon, Muon, Scion] <br><br> 
 
 [283] 
@@ -791,7 +792,7 @@ Advances in Neural Information Processing Systems 38 (NeurIPS 2024)</a> <br>
 
           [173] Ilyas Fatkhullin, Igor Sokolov, Eduard Gorbunov, Zhize Li and Peter Richtárik<br>
           <b>EF21 with bells & whistles: practical algorithmic extensions of modern error feedback </b><br>
-          Journal of Machine Learning Research, 2025 \\
+          Journal of Machine Learning Research, 2025 <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2110.03294">arXiv</a>] [method: EF21-SGD, EF21-PAGE, EF21-PP, EF21-BC, EF21-HB, EF21-Prox] [<a href="https://github.com/IgorSokoloff/ef21_experiments_source_code">github</a>] <br>
           <br>
