--- a/i_papers.html
+++ b/i_papers.html
@@ -80,7 +80,7 @@ Konstantin Burlachenko and Peter Richtárik<br>
 [279] 
 Egor Shulgin, Sarit Khirirat, and Peter Richtárik<br>
 <b>Smoothed normalization for efficient distributed private optimization</b><br>
-[<a href="https://arxiv.org/abs/2502.13482">arXiv</a>] [method: α-𝖭𝗈𝗋𝗆𝖤𝖢] <br><br> 
+[<a href="https://arxiv.org/abs/2502.13482">arXiv</a>] [method: α-𝖭𝗈𝗋𝗆𝖤𝖢] [<a href="posters/Poster-Smoothed_Normalization.pdf">poster</a>] <br><br> 
 
 [278] 
 Artem Riabinin, Ahmed Khaled, and Peter Richtárik<br>
