--- a/index.html
+++ b/index.html
@@ -45,6 +45,70 @@
 
 
 
+<h3>June 30, 2025</h3>
+
+<h1> On my way to Senegal </h1>
+<br>
+
+I am on my way to Mbour, Senegal, where I will give several introductory lectures on Federated Learning at the <a href="https://mlss-senegal.github.io">Machine Learning Summer School (MLSS),</a> organized by Adil Salim and Eugene Ndiaye.
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+<h3>June 25, 2025</h3>
+
+<h1> Teaching at Saudi Aramco, Dhahran </h1>
+<br>
+
+I arrived to Dhahran. During June 26-29, I will be teaching "Introduction to Optimization" for a cohort of Saudi Aramco employees enrolled in the KAUST Master in Data Science program. My TAs are my PhD students Grigory Malinovsky and Igor Sokolov.
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+<h3>June 16, 2025</h3>
+
+<h1> Talk at KiNiT </h1>
+<br>
+
+I am in Bratislava, giving a talk at the Kempelen Institute of Intelligent Technologies (KiNiT). 
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+<h3>June 4, 2025</h3>
+
+<h1> Vienna </h1>
+<br>
+
+I am in Vienna, attending the <a href="https://ps-mathematik.univie.ac.at/e/index.php?event=VWCO25">3rd Vienna Workshop on Computational Optimization 2025 (VWCO25),</a> taking place during June 4-7. I talked about two of our recent papers:
+
+<br>
+<br>
+<a href="talks/TALK-2025-06-05-BPM+Gluon.pdf">
+<img alt="" src="imgs/Gluon.png" width="700">
+</a>
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 <h3>May 19, 2025</h3>
 
 <h1>New Paper</h1>
