--- a/i_talks.html
+++ b/i_talks.html
@@ -45,7 +45,9 @@
 
 <h1>Future Talks</h1>
 
-
+<p>
+KAUST Workshop on Distributed Training in the Era of Large Models, November 24-25, 2025, KAUST, Thuwal, Saudi Arabia (organizer and speaker)
+</p>
 
 <p>
 Introduction to Machine Learning 2/2, Aramco, October 30 - November 2, 2025 (24 hours)
@@ -68,24 +70,18 @@ Introduction to Machine Learning 1/2, Aramco, October 9-12, 2025 (24 hours)
 In Conjunction with ACM AsiaCCS 2025</a> (FL-AsiaCCS’25), Hanoi, Vietnam, August 26, 2025 (plenary) 
 </p>
 
+
+<h1>2025 Talks</h1>
+
 <p>
+[266]
 Introduction to Optimization 2/2, Aramco, July 24-29, 2025 (24 hours)
 </p>
 
 <p>
-<a href="https://www.auai.org/uai2025/">41st Conference on Uncertainty in Artificial Intelligence (UAI 2025)</a>, Rio de Janeiro, Brazil, July 21-25, 2025
-</p>
-
-<p>
-<a href="https://icml.cc/Conferences/2025">The Forty-Second International Conference on Machine Learning (ICML 2025)</a>, Vancouver, Canada, July 13-19, 2025 
-</p>
-
-<p>
+[265]
 <a href="https://mlss-senegal.github.io">The Machine Learning Summer School (MLSS 2025)</a>, MBour, Senegal, June 23, 2025 - July 4, 2025 (invited lecturer)
 </p>
-
-
-<h1>2025 Talks</h1>
 
 <p>
 [264]
