--- a/index.html
+++ b/index.html
@@ -45,6 +45,19 @@
 
 
 
+<h3>July 23, 2025</h3>
+
+<h1> Teaching at Saudi Aramco, Dhahran </h1>
+<br>
+
+I arrived to Dhahran today. During July 24-27, I will be teaching Part 2 of the "Introduction to Optimization" course for a cohort of Saudi Aramco employees enrolled in the KAUST Master in Data Science program. 
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 <h3>June 30, 2025</h3>
 
 <h1> On my way to Senegal </h1>
