--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,12 @@
           
 <h1> Prepared in 2025 </h1>
 
+[285] 
+Igor Sokolov, Abdurakhmon Sadiev, Yury Demidovich, Fawaz S Al-Qahtani, and Peter Richtárik<br>
+<b>Bernoulli-LoRA: A Theoretical Framework for Randomized Low-Rank Adaptation</b><br>
+<span class="important">LLM Paper</span><br> 
+[<a href="https://arxiv.org/abs/2508.03820">arXiv</a>] [method: Bernoulli-LoRA] <br><br> 
+
 [284] 
 Artem Riabinin, Egor Shulgin, Kaja Gruntkowska, and Peter Richtárik<br>
 <b>Gluon: making Muon & Scion great again! (bridging theory and practice of LMO-based optimizers for LLMs)</b><br>
