--- a/index.html
+++ b/index.html
@@ -44,14 +44,34 @@
         <div id="content">
 
 
+<h3>August 5, 2025</h3>
 
-<h3>July 23, 2025</h3>
+<h1>New Paper</h1>
 
-<h1> Teaching at Saudi Aramco, Dhahran </h1>
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2508.03820">
+"Bernoulli-LoRA: A Theoretical Framework for Randomized Low-Rank Adaptation"</a> -
+joint work with Igor Sokolov, Abdurakhmon Sadiev, Yury Demidovich, and Fawaz S Al-Qahtani.
+<br>
+<br>
+  
+Abstract: <i>Parameter-efficient fine-tuning (PEFT) has emerged as a crucial approach for adapting large foundational models to specific tasks, particularly as model sizes continue to grow exponentially. Among PEFT methods, Low-Rank Adaptation (LoRA) (arXiv:2106.09685) stands out for its effectiveness and simplicity, expressing adaptations as a product of two low-rank matrices. While extensive empirical studies demonstrate LoRA's practical utility, theoretical understanding of such methods remains limited. Recent work on RAC-LoRA (arXiv:2410.08305) took initial steps toward rigorous analysis. In this work, we introduce Bernoulli-LoRA, a novel theoretical framework that unifies and extends existing LoRA approaches. Our method introduces a probabilistic Bernoulli mechanism for selecting which matrix to update. This approach encompasses and generalizes various existing update strategies while maintaining theoretical tractability. Under standard assumptions from non-convex optimization literature, we analyze several variants of our framework: Bernoulli-LoRA-GD, Bernoulli-LoRA-SGD, Bernoulli-LoRA-PAGE, Bernoulli-LoRA-MVR, Bernoulli-LoRA-QGD, Bernoulli-LoRA-MARINA, and Bernoulli-LoRA-EF21, establishing convergence guarantees for each variant. Additionally, we extend our analysis to convex non-smooth functions, providing convergence rates for both constant and adaptive (Polyak-type) stepsizes. Through extensive experiments on various tasks, we validate our theoretical findings and demonstrate the practical efficacy of our approach. This work is a step toward developing theoretically grounded yet practically effective PEFT methods.</i>
+  
 <br>
 
-I arrived to Dhahran today. During July 24-27, I will be teaching Part 2 of the "Introduction to Optimization" course for a cohort of Saudi Aramco employees enrolled in the KAUST Master in Data Science program. 
 <br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+<h3>July 27, 2025</h3>
+
+<h1> Back at KAUST </h1>
+<br>
+
+I am back at KAUST for a week, after which I'll take a bit of vacation.<br>
 <br>
 <img alt="" src="imgs/fancy-line.png" width="196" height="36">
 <br>
