--- a/i_teaching.html
+++ b/i_teaching.html
@@ -50,6 +50,20 @@
 
 <ul>
 
+  <li> DSA 008, Introduction to Machine Learning (Fall 2025)</li>
+  <li> CS 332, Federated Learning (Fall 2025)</li>
+  <li> CS 331, Stochastic Gradient Descent Methods (Fall 2025)</li>
+  <li> CS 398, CS Graduate Seminar (Fall 2025)</li>
+  
+  <li> DSA 211, Introduction to Optimization (Summer 2025)</li>
+  <li> CS 331, Stochastic Gradient Descent Methods (Spring 2025)</li>
+  
+  <li> CS 331, Stochastic Proximal Point Methods (Spring 2024)</li>  
+  <li> DSA 006, Introduction to Machine Learning (Summer 2023)</li>  
+  <li> CS 332, Federated Learning (Spring 2023)</li>
+  <li> DSA 008, Introduction to Optimization (Fall 2022)</li>
+  <li> CS 331, Stochastic Gradient Descent Methods (Fall 2022)</li>
+        
   <li> CS 332, Federated Learning (<a href="https://piazza.com/kaust.edu.sa/spring2022/cs332">Spring 2022 - Piazza</a>)</li>
 
   <li> CS 331, Stochastic Gradient Descent Methods (<a href="https://piazza.com/kaust.edu.sa/fall2021/cs331">Fall 2021 - Piazza</a>)</li>
