--- a/index.html
+++ b/index.html
@@ -44,6 +44,36 @@
         <div id="content">
 
 
+<h3>August 29, 2025</h3>
+
+<h1> Fall 2025: Teaching 3 Courses & Leading the CS Graduate Seminar </h1>
+<br>
+
+I am back at KAUST. The Fall 2025 semester starts on Sunday, August 31. I am teaching three courses this semester: CS 331 (Stochastic Gradient Descent Methods),  CS 332 (Federated Learning) and DSA ??? (Introduction to Machine Learning). In addition, I am leading CS 398 (CS Graduate Seminar).
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+<h3>August 20-27, 2025</h3>
+
+<h1> ACM AsiaCCS 2025 in Vietnam </h1>
+<br>
+
+I am attending ACM AsiaCCS 2025, taking place in Hanoi, Vietnam. On August 26, I am giving the plenary talk at the <a href="https://federated-learning.org/fl-asiaccs-2025/">International Workshop on Secure and Efficient Federated Learning</a>. This was my first time in Vietnam!
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 <h3>August 5, 2025</h3>
 
 <h1>New Paper</h1>
