--- a/i_join.html
+++ b/i_join.html
@@ -188,12 +188,16 @@ Please do NOT send emails to me asking for the status of your application. All s
           </h1>
 
           I always have postdoc and research scientist (RS) positions open
-          for outstanding applicants. Funding of these positions comes from my exiting grants. Alternatively (or at the same time),
+          for outstanding applicants. Funding of these positions comes from my exiting grants. 
+          Alternatively (or at the same time),
           you can apply for a postdoc position funded by the <a href="https://kgfp.kaust.edu.sa/home">KAUST
           Global Fellowship</a> initiative. However, in order to able to do so, you need to pre-apply via the interfolio system first. I will shortlist a few candidates to interview (via Zoom) and will then select a candidate or a couple candidates for whom I will write the required support letter, which will enable them to apply for the KAUST Global Fellowship formally.
             <br>
               <br>
-          The typical duration of a postdoc position is 2-3 years. The typical duration of a RS position
+          The typical duration of a postdoc position is 2-3 years. 
+          
+          <br><br>
+          The typical duration of a RS position
           is 3 years or more (including an effectively permanent position). RS positions are offered at 6 levels of seniority. The three most senior levels  are roughly equivalent in status and compensation to Assistant, Associate and Full Professor positions, respectively.
 
            <br>
