--- a/i_papers.html
+++ b/i_papers.html
@@ -50,9 +50,14 @@
           
 <h1> Prepared in 2025 </h1>
 
+[286] 
+Laurent Condat and Peter Richtárik<br>
+<b>Convergence analysis of the PAGE stochastic algorithm for convex finite-sum optimization</b><br>
+[<a href="https://arxiv.org/abs/2509.00737">arXiv</a>] [method: PAGE] <br><br> 
+
 [285] 
 Igor Sokolov, Abdurakhmon Sadiev, Yury Demidovich, Fawaz S Al-Qahtani, and Peter Richtárik<br>
-<b>Bernoulli-LoRA: A Theoretical Framework for Randomized Low-Rank Adaptation</b><br>
+<b>Bernoulli-LoRA: A theoretical framework for randomized low-rank adaptation</b><br>
 <span class="important">LLM Paper</span><br> 
 [<a href="https://arxiv.org/abs/2508.03820">arXiv</a>] [method: Bernoulli-LoRA] <br><br> 
 
