--- a/index.html
+++ b/index.html
@@ -44,6 +44,29 @@
         <div id="content">
 
 
+<h3>August 31, 2025</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2509.00737">
+"Convergence Analysis of the PAGE Stochastic Algorithm for Convex Finite-Sum Optimization"</a> -
+joint work with Laurent Condat.
+<br>
+<br>
+  
+Abstract: <i>PAGE is a stochastic algorithm proposed by Li et al. [2021] to find a stationary point of an average of smooth nonconvex functions. We analyze PAGE in the convex setting and derive new convergence rates, leading to a better complexity than in the general nonconvex regime.</i>
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
 <h3>August 29, 2025</h3>
 
 <h1> Fall 2025: Teaching 3 Courses & Leading the CS Graduate Seminar </h1>
