--- a/i_papers.html
+++ b/i_papers.html
@@ -291,13 +291,14 @@ NeurIPS 2024 Workshop: Optimization for Machine Learning (OPT 2024) <br>
 [247] 
 Hanmin Li, Kirill Acharya, and Peter Richtárik<br>
 <b>The power of extrapolation in federated learning</b><br>
-Advances in Neural Information Processing Systems 38 (NeurIPS 2024)</a> <br>
+Advances in Neural Information Processing Systems 38 (NeurIPS 2024) <br>
 <span class="important">Federated Learning Paper</span><br>   
 [<a href="https://arxiv.org/abs/2405.13766">arXiv</a>] [method: FedExProx, FedExProx-GraDS, FedExProx-StoPS] <br><br> 
 
 [246] 
 Kai Yi, Georg Meinhardt, Laurent Condat, and Peter Richtárik<br>
 <b>FedComLoc: Communication-efficient distributed training of sparse and quantized models</b><br>
+Transactions on Machine Learning Research (TMLR 2025) <br>
 <span class="important">Federated Learning Paper</span><br>   
 [<a href="https://arxiv.org/abs/2403.09904">arXiv</a>] [method: FedComLoc] <br><br> 
 
