--- a/i_talks.html
+++ b/i_talks.html
@@ -70,6 +70,10 @@ Applied Mathematics Colloquium, KAUST, Saudi Arabia, September 16, 2025
 </p>
 
 <p>
+<a href="https://www.sfb1283.uni-bielefeld.de/talks/index/2025-09-08/2025-09-14">Stochastic Numerics Seminar</a>, Bielefeld University, Bielefeld, Germany, September 10, 2025 (invited by Lubomir Banas)
+</p>
+
+<p>
 <a href="https://ins.uni-bonn.de/2025/hda">10th Workshop on High-Dimensional Approximation (HDA2025)</a>, Bonn, Germany, September 8-12, 2025 (invited by Michael Griebel)
 </p>
 
