--- a/index.html
+++ b/index.html
@@ -44,6 +44,22 @@
         <div id="content">
 
 
+<h3>September 8, 2025</h3>
+
+<h1>Talk @ HDA 2025</h1>
+
+I am attending the <a href="https://ins.uni-bonn.de/media/public/u/garcke/hda2025/">10th Workshop on
+High-Dimensional Approximation (HDA 2025)</a>, taking place during September 8-12 in Bonn, Germany. I am giving my keynote talk today. 
+
+<br> 
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
 <h3>September 4, 2025</h3>
 
 <h1>AMCS/STAT Graduate Seminar Talk</h1>
