--- a/index.html
+++ b/index.html
@@ -44,6 +44,21 @@
         <div id="content">
 
 
+<h3>September 10, 2025</h3>
+
+<h1>Talk @ Bielefeld</h1>
+
+Today, I am giving a talk at the <a href="https://www.sfb1283.uni-bielefeld.de/talks/view/20406">Stochastic Numerics Seminar</a> at Bielefeld University, Germany. 
+
+<br> 
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
 <h3>September 8, 2025</h3>
 
 <h1>Talk @ HDA 2025</h1>
