--- a/i_talks.html
+++ b/i_talks.html
@@ -46,6 +46,11 @@
 <h1>Future Talks</h1>
 
 <p>
+ELLIIT Symposium on Optimization for Learning, May 6-8, 2026, Lund, Sweden (invited speaker and member of the scientific committee)
+</p>
+
+
+<p>
 KAUST Workshop on Distributed Training in the Era of Large Models, November 24-25, 2025, KAUST, Thuwal, Saudi Arabia (organizer and speaker)
 </p>
 
