--- a/index.html
+++ b/index.html
@@ -45,6 +45,46 @@
         <div id="content">
 
 
+
+<h3>September 18, 2025</h3>
+
+<h1>Three Papers Accepted to NeurIPS 2025</h1>
+
+The following papers from my <a href="file:///Users/richtap/git/PeterRichtarik.github.io/i_team.html">Optimization and Machine Learning Lab</a> were accepted to <a href="https://neurips.cc/Conferences/2025">NeurIPS 2025</a>, to be held simultaneously in San Diego and Mexico City in December 2025:
+ <ul>
+ <li>Abdurakhmon Sadiev, Peter Richtárik and Ilyas Fatkhullin. <a href="https://openreview.net/pdf?id=rgrpS4SFNF">Second-order Optimization under Heavy-Tailed Noise: Hessian Clipping and Sample Complexity Limits</a> </li>
+ <li>Peter Richtárik, Simone Maria Giancola, Dymitr Lubczyk, Robin Yadav. <a href="https://openreview.net/pdf?id=EqWZ1yVRfN">Local Curvature Descent: Squeezing More Curvature out of Standard and Polyak GD</a> </li>
+ <li>Sarit Khirirat, Abdurakhmon Sadiev, Artem Riabinin, Eduard Gorbunov, Peter Richtárik. <a href="https://openreview.net/pdf?id=LmcTbBvgjP">Error Feedback under $(L_0,L_1)$-Smoothness: Normalization and Momentum</a> </li>
+ </ul>
+
+I am not sure yet if I will be able to travel (too much teaching and other duties this semester!). If I do, I'll see you in Mexico City.
+
+<br> 
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
+<h3>September 16, 2025</h3>
+
+<h1>Talk at the Mathematics and Applications Colloquium @ KAUST</h1>
+
+Today at 4pm I am giving a talk at the Mathematics and Applications Colloquium at KAUST, organized by <a href="https://www.google.com/search?client=safari&rls=en&q=Jinchao+Xu&ie=UTF-8&oe=UTF-8">Jinchao Xu</a>.
+
+<br> 
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
 <h3>September 15, 2025</h3>
 
 <h1>CS Graduate Seminar Talk</h1>
