update 2 Simons talks

--- a/i_papers.html
+++ b/i_papers.html
@@ -30,7 +30,7 @@
       </div>
       <ul class="menu">
         <li><a href="index.html">News</a></li>
-        <li><a href="i_oldnews.html">Old News</a></li>
+        <li><a href="i_oldnews-2024.html">Old News</a></li>
         <li><a class="active" href="i_papers.html">Papers</a></li>
         <li><a href="i_talks.html">Talks</a></li>
         <li><a href="i_videotalks.html">Video Talks</a></li>
@@ -38,7 +38,7 @@
       <!--  <li><a href="i_seminar.html">Seminar</a></li> !-->
         <li><a href="i_software.html">Code</a></li>
         <li><a href="i_team.html">Team</a></li>
-        <li><a href="i_join.html">Join</a></li>
+        <li><a href="i_apply.html">Apply</a></li>
         <li><a href="i_bio.html">Bio</a></li>
         <li><a href="i_teaching.html">Teaching</a></li>
         <li><a href="i_consulting.html">Consulting</a></li>
@@ -174,6 +174,7 @@ The 2025 Annual Conference of the Nations of the Americas Chapter of the ACL (NA
 [265] 
 Sarit Khirirat, Abdurakhmon Sadiev, Artem Riabinin, Eduard Gorbunov, and Peter Richtárik<br>
 <b>Error feedback under $(L_0,L_1)$-smoothness: normalization and momentum </b><br>
+Advances in Neural Information Processing Systems 39 (NeurIPS 2025)</a> <br>
 <span class="important">Federated Learning Paper</span><br>   
 [<a href="https://arxiv.org/abs/2410.16871">arXiv</a>] [method: ||EF21||, ||EF21-SGDM||] <br><br> 
 
@@ -245,6 +246,7 @@ Laurent Condat and Peter Richtárik<br>
 [254] 
 Peter Richtárik, Simone Maria Giancola, Dymitr Lubczyk, and Robin Yadav<br>
 <b>Local curvature descent: Squeezing more curvature out of standard and Polyak gradient descent</b><br>
+Advances in Neural Information Processing Systems 39 (NeurIPS 2025)</a> <br>
 NeurIPS 2024 Workshop: Optimization for Machine Learning (OPT 2024) <br>
 [<a href="https://arxiv.org/abs/2405.16574">arXiv</a>] [method: LCD1, LCD2, LCD3] [<a href="posters/Poster-LCD_2024.pdf">poster</a>] <br><br> 
 
