--- a/i_teaching.html
+++ b/i_teaching.html
@@ -29,7 +29,7 @@
       </div>
       <ul class="menu">
         <li><a href="index.html">News</a></li>
-        <li><a href="i_oldnews.html">Old News</a></li>
+        <li><a href="i_oldnews-2024.html">Old News</a></li>
         <li><a href="i_papers.html">Papers</a></li>
         <li><a href="i_talks.html">Talks</a></li>
         <li><a href="i_videotalks.html">Video Talks</a></li>
@@ -37,7 +37,7 @@
       <!--  <li><a href="i_seminar.html">Seminar</a></li> !-->
         <li><a href="i_software.html">Code</a></li>
         <li><a href="i_team.html">Team</a></li>
-        <li><a href="i_join.html">Join</a></li>
+        <li><a href="i_apply.html">Apply</a></li>
         <li><a href="i_bio.html">Bio</a></li>
         <li><a class="active" href="i_teaching.html">Teaching</a></li>
         <li><a href="i_consulting.html">Consulting</a></li>
