--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,11 @@
           
 <h1> Prepared in 2025 </h1>
 
+[287] 
+Artavazd Maranjyan and Peter Richtárik<br>
+<b>Ringleader ASGD: The first asynchronous SGD with optimal time complexity under data heterogeneity</b><br>
+[<a href="https://arxiv.org/abs/2509.22860">arXiv</a>] [method: Ringleader ASGD] <br><br> 
+
 [286] 
 Laurent Condat and Peter Richtárik<br>
 <b>Convergence analysis of the PAGE stochastic algorithm for convex finite-sum optimization</b><br>
